--- a/shop/home/templates/home/home.html
+++ b/shop/home/templates/home/home.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% csrf_token %}
 <div class="container" style="margin-top: 20px;">
     <div class="row" style="width: 1500px;">
         <div class="col-md-8" style="height: 700px;">
