--- a/shop/products/templates/products/detail.html
+++ b/shop/products/templates/products/detail.html
@@ -3,38 +3,51 @@
 {% block content %}
 <br>
 
-<div style="height: 700px; width: 40%; border: 2px black solid; border-radius: 10px; background-color: azure;">
-    <br>
-    <div style="width: 100%; height: 5%;">
-        <h3 style="margin-left: auto; margin-right: auto; text-align: center;">{{ product.name }}</h3>
+<div style="display: flex; justify-content: space-between;">
+
+    <!-- دیو اول -->
+    <div style="height: 700px; width: 58%; border: 2px black solid; border-radius: 10px; background-color: azure;">
+        <br>
+        <div style="width: 100%; height: 5%;">
+            <h3 style="margin-left: auto; margin-right: auto; text-align: center;">{{ product.name }}</h3>
+        </div>
+        <br>
+
+        <div style="margin-left: auto; margin-right: auto; text-align: center;">
+            <img src="data:image/jpeg;base64,{{ product.image_base64 }}" style="width: 300px; height: 370px;">
+        </div>
+        <br>
+
+        <h4 style="margin-left: 50px;">description: {{ product.description }}</h4>
+        <h4 style="margin-left: 50px;">price: {{ product.price }} $</h4>
+        <h5 style="margin-left: 50px;">stock: {{ product.stock }}</h5>
+        <h5 style="margin-left: 50px;">available: {{ product.available }}</h5>
+
+        <form action="{% url 'orders:cart_add' product.id %}" method="post" style="margin-left: 50px;">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit" class="btn btn-primary"> add to cart </button>
+        </form>
     </div>
-    <br>
 
-    <div style="margin-left: auto; margin-right: auto; text-align: center; ">
-        <img src="data:image/jpeg;base64,{{ product.image_base64 }}" style="width: 300px; height: 370px;">
+    <!-- دیو دوم -->
+    <div style="width: 40%; border: 2px black solid; border-radius: 10px; padding: 20px; background-color: #f5f5f5;">
+        <h3>Leave a Comment:</h3>
+        <form method="post">
+            {% csrf_token %}
+            {{ comment_form.as_p }}
+            <button type="submit">Submit</button>
+        </form>
+
+        <h3>Comments:</h3>
+        <ul>
+            {% for comment in comments %}
+            <li>{{ comment.user.username }}: {{ comment.body }} ({{ comment.created }})</li>
+            {% empty %}
+            <li>No comments yet.</li>
+            {% endfor %}
+        </ul>
     </div>
-    <br>
-
-
-
-    <h4 style="margin-left: 50px;">description : {{ product.description }}</h4>
-    <h4 style="margin-left: 50px;">price : {{ product.price }} $</h4>
-    <h5 style="margin-left: 50px;">stock : {{ product.stock }}</h5>
-    <h5 style="margin-left: 50px;">available : {{ product.available }}</h5>
-
 
 </div>
-
-<form action="{% url 'orders:cart_add' product.id %}" method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit" class="btn btn-primary"> add to cart </button>
-
-</form>
-
-</div>
-
-
-
-
 {% endblock %}
