--- a/shop/templates/inc/navbar.html
+++ b/shop/templates/inc/navbar.html
@@ -4,6 +4,8 @@
             <a class="nav-link active" href="{% url 'home:home' %}">Home</a>
             {% if request.user.is_authenticated %}
             <a class="nav-link active" href="{% url 'accounts:user_logout' %}">Logout</a>
+            <a class="nav-link active" href="{% url 'accounts:user_profile' %}">Profile</a>
+
 
             {% else %}
             <a class="nav-link active" href="{% url 'accounts:user_login' %}">Login</a>
